# pjgdcli

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_tests.py  test_package.py  test_undo.py
examples/: receipts_sample.csv  receipts_with_errors.csv
src/pjgdcli/: cli.py  database.py  services.py
